<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login">SIGN IN</string>
    <string name="register">SIGN UP</string>
    <string name="logout">Logout</string>
    <string name="oops">Oops!</string>
    <string name="signup_error_msg">Please make sure you enter a username, password and email address!</string>
    <string name="login_error_msg">Please make sure you enter a username and password!</string>
    <string name="forgot_pw_error_msg">Please make sure you enter an email address!</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_pw_reset">Send Password Reset Link</string>
    <string name="pw_reset_success">Successfully reset password!</string>
    <string name="empty_inbox_label">No messages to display!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="users_query_error">Error getting users!</string>
    <string name="action_camera_label">Camera</string>
    <string name="action_message_label">New Message</string>
    <string name="external_storage_error">Error accessing external storage!</string>
    <string name="video_limit">The selected video must be less than 10MB!</string>
    <string name="file_error">There was a problem opening selected file!</string>
    <string name="file_build_error">There was an error with the file selected. Please select a different file!</string>
    <string name="file_too_large">File size too large! Make sure it\'s under 10MB.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="add_friends">Add some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="message_sent">Message sent!</string>
    <string name="message_not_sent">There was an error sending your message! Please try again.</string>
    <string name="message_empty">Message empty! Please type something in your message.</string>
    <string name="title_activity_view_image">Image Message</string>
    <string name="text_message_title">Text Message</string>

    <string name="content_background_image">Background Image</string>
    <string name="subtitle">A Snapchat Clone</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
